2005-04-05  Miguel de Icaza  <miguel@novell.com>

	* Syscall.cs: Set entry point for sys_syslog to be syslog.
	Include the syslog.h header in the generated map so that we
	actually do the mapping.

2005-03-28  Jonathan Pryor <jonpryor@vt.edu>

	* UnixConvert.cs: Add ToFopenMode() methods, which convert FileMode/FileAccess
	  into an fopen(3) mode string.  ToOpenFlags() should throw
	  ArgumentOutOfRangeException for argument violations.
	* StdioFileStream.cs: Add constructor overloads accepting filename and
	  FileMode/FileAccess overloads; Compatibility fixes with regression tests;
	  remove IDisposable implementation since System.IO.Stream already
	  implements it (which calls Close() for us).

2005-03-17  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: Move Errno-related functionality into Stdlib from Syscall,
	  since (1) errno is part of C89, and (2) StdioFileStream will need it, and
	  StdioFileStream shouldn't use Syscall.  Add [UnmanagedFunctionPointer]
		attribute to SignalHandler for .NET 2.0 (since signal handlers use C
		calling convention, not Stdcall).
	* Syscall.cs: Move Errno-related functionality into Stdlib.
	* UnixMarshal.cs: Use ERANGE not EPERM when figuring out appropriate
	  translator, since ERANGE is part of C99 and EPERM isn't.  Use Stdlib
	  instead of Syscall for Errno-related functionality.

2005-02-02  Jonathan Pryor <jonpryor@vt.edu>

	* UnixFile.cs: Cope with changes in UnixStream.
	* UnixStream.cs: Change FileDescriptor property to Handle for consistency.
	* StdioFileStream.cs: Change FileStream property to Handle for consistency.

2005-02-02  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: Remove public sys_ methods.  Some were public by mistake, and
	  others so that users could manually marshal strings if desired.  Manually
	  marshaling strings shouldn't be necessary, though, so remove them too.

2005-02-02  Jonathan Pryor <jonpryor@vt.edu>

	* StdioFileStream.cs: Fix Length property to actually return the size of the